; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ipa-prop.c_ipa_callsite_param_set_info_type_formal.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ipa-prop.c_ipa_callsite_param_set_info_type_formal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgraph_edge = type { i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cgraph_edge*, i32, i32)* @ipa_callsite_param_set_info_type_formal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ipa_callsite_param_set_info_type_formal(%struct.cgraph_edge* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.cgraph_edge*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.cgraph_edge* %0, %struct.cgraph_edge** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.cgraph_edge*, %struct.cgraph_edge** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call %struct.TYPE_4__* @ipa_callsite_param(%struct.cgraph_edge* %8, i32 %9)
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  store i32 %7, i32* %12, align 4
  ret void
}

declare dso_local %struct.TYPE_4__* @ipa_callsite_param(%struct.cgraph_edge*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
